# torrey_public

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
handouts/: Makefile  final_project.tex  homework1.tex  homework2.tex  homework3.tex  homework4.tex  hw2.cpp  hw2.h  preamble.tex
handouts/imgs/: hw_1_1.exr
scenes/aabb_test/: aabb_test.xml
scenes/bathroom/: scene.xml
scenes/buddha/: buddha.ply  buddha.xml
scenes/bunny/: bunny.ply  bunny.xml  bunny_plastic_floor_view_high.xml  bunny_plastic_floor_view_low.xml  bunny_plastic_floor_view_mid.xml
scenes/cbox/: cbox.xml  cbox_area_light_spheres.xml  cbox_area_light_spheres_blinn.xml  cbox_area_light_spheres_blinn_microfacet.xml  cbox_area_light_spheres_phong.xml  cbox_point_light.xml  cbox_point_light_spheres.xml
scenes/cbox_point_light/: cbox.xml
scenes/cbox_point_light_spheres/: cbox.xml
scenes/dining-room/: scene.xml
scenes/dining-room/textures/: spaichingen_hill_2k.exr
scenes/dragon/: dragon.ply  dragon.xml
scenes/head/: head.xml  head_spherical_light.xml
scenes/hw1_spheres/: scene0.xml  scene0_spherical_light.xml  scene1.xml  scene1_spherical_light.xml  scene1_spherical_light_blinn.xml  scene1_spherical_light_phong.xml  scene2.xml  scene3.xml  scene4.xml
scenes/hw2_triangles/: single_triangle.xml  tetrahedron.xml
scenes/living-room-Wig42/: scene_bgonly.xml
scenes/party/: armadillo.ply  party.xml  party_bgonly.xml
scenes/sponza/: sponza.exr  sponza.xml  sponza_bgonly.xml  sponza_spherical_light.xml
scenes/teapot/: teapot_constant.xml  teapot_textured.xml  teapot_textured_blinn.xml  teapot_textured_blinn_grazing_view.xml  teapot_textured_blinn_microfacet.xml  teapot_textured_blinn_microfacet_grazing_view.xml  teapot_textured_phong.xml  teapot_textured_phong_grazing_view.xml
scenes/texture_test/: grid.exr  texture.xml  texture_scaled.xml
scenes/veach_mi/: mi.xml
src/: compute_normals.cpp  compute_normals.h  hw1.cpp  hw1.h  hw1_scenes.h  hw2.cpp  hw2.h  hw3.cpp  hw3.h  hw4.cpp  hw4.h  image.cpp  main.cpp  matrix.h  parse_obj.cpp  parse_obj.h  parse_ply.cpp  parse_ply.h  parse_scene.cpp  parse_scene.h  parse_serialized.cpp  parse_serialized.h  print_scene.cpp  print_scene.h  progressreporter.h  timer.h  torrey.h  transform.h  vector.h
